fix: data.yaml path

--- a/config/data.yaml
+++ b/config/data.yaml
@@ -1,7 +1,7 @@
-path: data/
-train: /train/images
-val: /valid/images
-test: /test/images
+path: data
+train: train/images
+val: valid/images
+test: test/images
 
 nc: 2
 names: ["empty", "occupied"]
